
  [Antti Virtanen]
  * Sensor graph shrinking not supported anymore to prevent race conditions between adaptor threads and qt mainloop. Fixes: NB#242237
  * Implemented downsample filter for XYZ data.
  * RotationFilter won't propagate data for compass input. Fixes: NB#242233.
  * TapAdaptor won't try to configure pollrate for accelerometer driver anymore. Fixes: NB#242902.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Fri, 01 Apr 2011 11:48:34 +0200

sensord (0.6.41) unstable; urgency=low

  [Timo Rongas]
  * Fixed library path for libdatatypes in core/core.pro

  [Lihan Guo]
  * Added qt-mobility support for tests/testapp.

  [Antti Virtanen]
  * Refactoring:
    - Removed unnecessary @todo comments.
    - AbstractChain is now able to take care of deleting added RingBuffers.
    - Removed unused SensorState concept.
    - Loader optimizations.
    - NodeBase bufferInterval and bufferSize handlers will try to locate source which supports buffering in case there a multiple sources.
    - Removed unused typeId() concept.
    - SensorManager::addSensor() now gracefully handles if object registration to dbus fails.
    - SocketHandler::socketReadable now gracefully handles if client writes sessionId incorrectly.
    - Cleanup for adaptor codes
    - Better error checks in InputDevAdaptor::getInputDevices().
    - Logger optimized and improved a bit.
    - Debug logs improved.
    - Cleanup makefiles.
    - Reduced used DataEmitter buffer sizes to 1.
    - Timestamp values in datatypes are now passed as const refs.
    - Removed unnecessary friend declarations from datatypes.
    - Tap now hides internal data member.
    - TouchData members renamed for clarity.
    - AbstractSensorChannelInterface improvements
      - release() deprecated and errorCodeInt() removed.
      - hiding members which were too visible.
    - AbstractSensorChannelInterface subclass improvements:
      - listenInterface() and controlInterface() are now deprecated.