@@ -6,6 +6,7 @@
    Copyright (C) 2009-2010 Nokia Corporation
 
    @author Timo Rongas <ext-timo.2.rongas@nokia.com>
+   @author Antti Virtanen <antti.i.virtanen@nokia.com>
 
    This file is part of Sensord.
 
@@ -25,12 +26,18 @@
 
 #include "compass.h"
 
-Compass::Compass(const CompassData& data)
-    : QObject(), data_(data.timestamp_, data.degrees_, data.level_)
+Compass::Compass(const CompassData& data, bool declinationCorrection)
+    : QObject(),
+      data_(data.timestamp_,
+            declinationCorrection ? data.correctedDegrees_ : data.degrees_,
+            data.level_)
 {
 }
 
 Compass::Compass(const Compass& data)
-    : QObject(), data_(data.data().timestamp_, data.data().degrees_, data.data().level_)
+    : QObject(),
+      data_(data.data().timestamp_,
+            data.data().degrees_,
+            data.data().level_)
 {
 }
