@@ -29,22 +29,29 @@
 #include "logging.h"
 
 const char* DeclinationFilter::declinationKey = "/system/osso/location/settings/magneticvariation";
+quint64 DeclinationFilter::updateInterval((quint64)1000000 * (quint64)60 * (quint64)60); // 1 hour
 
 DeclinationFilter::DeclinationFilter() :
         Filter<CompassData, DeclinationFilter, CompassData>(this, &DeclinationFilter::correct),
         declinationCorrection_(0)
 {
     g_type_init();
-
-    loadSettings();
 }
 
 void DeclinationFilter::correct(unsigned, const CompassData* data)
 {
-    newOrientation = *data;
-    newOrientation.degrees_ += declinationCorrection_;
-    orientation = newOrientation;
-    source_.propagate(1, &orientation);
+    CompassData newOrientation(*data);
+    if(newOrientation.timestamp_ - lastUpdate_ > updateInterval)
+    {
+        loadSettings();
+        lastUpdate_ = newOrientation.timestamp_;
+        sensordLogD() << "Fetched declination correction from GConf: " << declinationCorrection_;
+    }
+    newOrientation.correctedDegrees_ = newOrientation.degrees_;
+    newOrientation.correctedDegrees_ += declinationCorrection_;
+    newOrientation.correctedDegrees_ %= 359;
+    orientation_ = newOrientation;
+    source_.propagate(1, &orientation_);
 }
 
 void DeclinationFilter::loadSettings()
